# review_ai

./: Makefile  Readme.md  env.py  pyproject.toml
ai/: config.py  model.py  review_extractor.py
etl/: etl_bronze.py  etl_gold.py  etl_silver.py
